--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="stylesheet" href="dist/css/principal.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css">
   <!-- Ionicons -->
@@ -21,7 +22,8 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <img src="dist/img/vllogomenu.png" alt="">
+    <img class="soft" src="dist/img/vllogomenu.png" alt="">
+    <img class="soft" src="dist/img/SElogo.png" alt="">
   </div>
   <!-- /.login-logo -->
   <div class="card">
@@ -83,6 +85,7 @@
     <!-- /.login-card-body -->
   </div>
 </div>
+
 <!-- /.login-box -->
 
 <!-- jQuery -->
