--- a/pages/examples/cadalunos.html
+++ b/pages/examples/cadalunos.html
@@ -62,7 +62,7 @@
                with font-awesome or any other icon font library -->
 
                <li class="nav-item">
-                <a href="../../index.html" class="nav-link">
+                <a href="../../dash.php" class="nav-link">
                   <i class="fas fa-home nav-icon"></i>
                   <p>Início</p>
                 </a>
@@ -168,11 +168,11 @@
                <i class="fas fa-minus"></i></button>
               </div> -->
             </div>
-            <form action="./back/proccadalunos.php" method="POST">  <!--formulario inicio-->
+            <form action="back/proccadalunos.php" method="POST">  <!--formulario inicio-->
             <div class="card-body">
               <div class="form-group">
                 <label>* Escola</label>
-                  <select class="form-control select2" style="width: 100%;" required>
+                  <select name="escola" class="form-control select2" style="width: 100%;" required>
                     <option selected="selected">Selecione</option>
                     <option>João Correia de Melo</option>
                     <option>Cordeiro Filho</option>
@@ -181,7 +181,7 @@
               </div>
               <div class="form-group">
                 <label>* Turma</label>
-                  <select class="form-control select2" style="width: 100%;" required>
+                  <select name="turma" class="form-control select2" style="width: 100%;" required>
                     <option selected="selected">Selecione</option>
                     <option>Pre I</option>
                     <option>1º Ano</option>
@@ -198,11 +198,15 @@
               </div>
               <div class="form-group">
                 <label for="inputName">Idade</label>
-                <input type="number" id="inputName" name="idade" class="form-control">
+                <input disabled type="number" id="inputName"  class="form-control" >
               </div>
               <div class="form-group">
-                <label for="inputName">Sexo</label>
-                <input type="text" id="inputName" name="sexo" class="form-control">
+                <label>Sexo</label>
+                  <select name="sexo" class="form-control select2" style="width: 100%;">
+                    <option selected="selected">Selecione</option>
+                    <option>Masculino</option>
+                    <option>Feminino</option>
+                  </select>
               </div>
               <div class="form-group">
                 <label for="inputName">Peso</label>
@@ -214,7 +218,7 @@
               </div>
               <div class="form-group">
                 <label for="inputName">IMC</label>
-                <input type="text" id="inputName" name="imc" class="form-control">
+                <input disabled type="text" id="inputName"  class="form-control">
               </div>
               <div class="form-group">
                 <label for="inputName">Percentil</label>
@@ -222,7 +226,7 @@
               </div>
               <div class="form-group">
                 <label for="inputName">Estado Nutricional</label>
-                <input type="text" id="inputName" name="estnutricional" class="form-control">
+                <input disabled type="text" id="inputName"  class="form-control">
               </div>
 
               </div>
