--- a/pages/examples/cadescolas.html
+++ b/pages/examples/cadescolas.html
@@ -62,7 +62,7 @@
                with font-awesome or any other icon font library -->
 
                <li class="nav-item">
-                <a href="../../index.html" class="nav-link">
+                <a href="../../dash.php" class="nav-link">
                   <i class="fas fa-home nav-icon"></i>
                   <p>Início</p>
                 </a>
@@ -90,7 +90,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./cadalunos.html" class="nav-link">
+                <a href="./cadalunos.php" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Alunos</p>
                 </a>
