--- a/pages/examples/cadalunos.html
+++ b/pages/examples/cadalunos.html
@@ -37,7 +37,7 @@
   <!-- Main Sidebar Container -->
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
-    <a href="../../index.html" class="brand-link">
+    <a href="../../dash.php" class="brand-link">
       <img src="../../dist/img/vllogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
            style="opacity: 1">
       <span class="brand-text font-weight-light">VL-Nutri</span>
@@ -90,7 +90,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./cadalunos.html" class="nav-link active">
+                <a href="./cadalunos.php" class="nav-link active">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Alunos</p>
                 </a>
