--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 <body class="hold-transition login-page" id="bakbody">
 <div class="login-box">
   <div class="login-logo">
-    <img class="soft" src="dist/img/vllogomenu.png" alt="">
+    <a href="#"> <img class="soft" src="dist/img/vllogomenu.png" alt=""> </a>
+    <a href="http://dlirati.com.br" target="blank"> <img class="soft1" src="dist/img/logodeli.png" alt=""> </a>
    
   </div>
   <!-- /.login-logo -->
